--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -2,14 +2,8 @@
 import Layout from '../layouts/BlogPost.astro';
 ---
 
-<Layout
-	title="Privacy"
-	description="Lorem ipsum dolor sit amet"
-	pubDate={new Date('August 08 2021')}
->
-
-    <p>本网站使用 Google AdSense 投放广告。</p>
-    <p>Google 可能会使用 Cookie 来展示个性化广告。</p>
-    <p>用户可通过 Google 广告设置页面选择退出。</p>
+<Layout title="隐私说明" description="本网站如何处理数据与隐私" pubDate={new Date('2026-01-20')}>
+	<p>本网站可能使用统计工具来了解访问趋势，但不会主动收集可识别个人身份的数据。</p>
+	<p>如果未来启用第三方广告或分析服务，将在此页面同步说明其 Cookie 与数据使用方式。</p>
+	<p>如需删除或更正相关信息，请通过关于页面的联系方式联系我。</p>
 </Layout>
-
